--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
@@ -6,4 +6,6 @@ body {
   min-height: 100vh;
   justify-content: center;
   align-items: center;
-}
+} */
+
+/* CSS BREAKS IF I UMCOMMENT THIS CODE */
