--- a/client/src/components/css/Tasks.css
+++ b/client/src/components/css/Tasks.css
@@ -1,3 +1,9 @@
+.statusTitle {
+  margin: 0 auto;
+  font-size: 10rem;
+  display: flex;
+}
+
 .task-title {
   display: flex;
   justify-content: space-between;
