--- a/client/src/components/css/Backlog.css
+++ b/client/src/components/css/Backlog.css
@@ -2,11 +2,11 @@
   display: grid;
   margin: 0 auto;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  padding: 20px;
-  background-color: #f9f9f9;
+  padding: 10px;
+  /* background-color: #f9f9f9; */
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  width: max-content;
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
+  width: 60rem;
 }
 
 .backlog-header {
