--- a/client/src/components/css/Tasks.css
+++ b/client/src/components/css/Tasks.css
@@ -15,7 +15,7 @@
   height: 2.5rem;
   width: 10rem;
   border-radius: 10px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -23,7 +23,7 @@
 }
 
 .status-column {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 0 1rem 0.5rem 1rem;
   border-radius: 10px;
   width: 11rem;
@@ -47,9 +47,12 @@
 }
 
 .task-card {
-  background-color: #288dff;
-  color: white;
-  height: 4rem;
+  background-color: #efebeb;
+  color: black;
+  border: 2px solid rgb(69, 125, 255);
+  box-shadow: #333333 5px 5px;
+  min-height: 4rem;
+  height: auto;
   width: 10rem;
   margin-bottom: 1rem;
   padding: 0.5rem;
