--- a/client/src/components/css/Projects.css
+++ b/client/src/components/css/Projects.css
@@ -17,6 +17,8 @@
 }
 
 .projects-title {
+  display: flex;
+  align-items: center;
   font-size: 1.2rem;
   margin-bottom: 15px;
   color: #333;
@@ -46,4 +48,18 @@
     border-right: none;
     border-bottom: 1px solid #ddd;
   }
+}
+
+.add-project {
+  background-color: #419aff;
+  color: white;
+  padding: 0px 2px 4px 2px;
+  border-radius: 40%;
+  height: 1rem;
+  width: 1rem;
+  display: flex;
+  align-items: center;
+  /* text-align: center; */
+  justify-content: center;
+  margin-left: 0.5rem;
 }
